gitops-artifacts/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: yaotpbot
  name: yaotpbot
  namespace: yaotpbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yaotpbot
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: yaotpbot
    spec:
      containers:
      - env:
        - name: AWS_DEFAULT_REGION
          value: eu-central-1
        image: registry.gitlab.com/ollaww/yaotpbot:0.0.13
        name: main
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: yaotpbot
  name: allow-all-egress
  namespace: yaotpbot
spec:
  podSelector:
    matchLabels:
      app: yaotpbot
  policyTypes:
  - Ingress
